syntax = "proto3";

package file;

option java_multiple_files = true;
option java_package = "com.fileservice.grpc";

service FileService {
  rpc CreateFile(CreateFileRequest) returns (FileMetadata);
  rpc GetFile(GetFileRequest) returns (FileMetadata);
  rpc UpdateFile(UpdateFileRequest) returns (FileMetadata);
  rpc DeleteFile(DeleteFileRequest) returns (EmptyResponse);
  rpc ListFiles(ListFilesRequest) returns (FileListResponse);
  rpc ShareFile(ShareFileRequest) returns (ShareResponse);
  rpc GetFileVersions(GetVersionsRequest) returns (VersionListResponse);
  rpc RestoreVersion(RestoreVersionRequest) returns (FileMetadata);
  rpc CheckPermission(CheckPermissionRequest) returns (PermissionResponse);
  rpc MoveFile(MoveFileRequest) returns (FileMetadata);
}

message MoveFileRequest {
  string file_id = 1;
  string new_parent_folder_id = 2; // Can be empty if moving to root
  string user_id = 3;
}


message CreateFileRequest {
  string name = 1;
  string path = 2;
  string user_id = 3;
  int64 size = 4;
  string mime_type = 5;
  string hash = 6;
  bool is_folder = 7;
  optional string parent_folder_id = 8;
}

message GetFileRequest {
  string file_id = 1;
  string user_id = 2;
}

message UpdateFileRequest {
  string file_id = 1;
  string user_id = 2;
  optional string name = 3;
  optional int64 size = 4;
  optional string hash = 5;
  optional int32 version = 6;
}

message DeleteFileRequest {
  string file_id = 1;
  string user_id = 2;
}

message ListFilesRequest {
  string user_id = 1;
  optional string path = 2;
  optional string parent_folder_id = 3;
  int32 limit = 4;
  int32 offset = 5;
}

message ShareFileRequest {
  string file_id = 1;
  string owner_id = 2;
  string shared_with_user_id = 3;
  string permission = 4; // read, write
}

message GetVersionsRequest {
  string file_id = 1;
  string user_id = 2;
}

message RestoreVersionRequest {
  string file_id = 1;
  int32 version = 2;
  string user_id = 3;
}

message CheckPermissionRequest {
  string file_id = 1;
  string user_id = 2;
  string required_permission = 3;
}

message FileMetadata {
  string id = 1;
  string name = 2;
  string path = 3;
  int64 size = 4;
  string mime_type = 5;
  string hash = 6;
  bool is_folder = 7;
  int32 version = 8;
  string created_at = 9;
  string updated_at = 10;
  string created_by = 11;
  string upload_url = 12;
  string download_url = 13;
}


message FileListResponse {
  repeated FileMetadata files = 1;
  int32 total = 2;
}

message ShareResponse {
  string share_id = 1;
  string file_id = 2;
  string shared_with_user_id = 3;
  string permission = 4;
  string created_at = 5;
}

message FileVersion {
  int32 version = 1;
  int64 size = 2;
  string hash = 3;
  string created_at = 4;
  string created_by = 5;
}

message VersionListResponse {
  repeated FileVersion versions = 1;
}

message PermissionResponse {
  bool has_permission = 1;
  string permission = 2;
}

message EmptyResponse {}
